webmodeler/beta/modeler-websockets/modeler-websockets-deployment.yaml
apiVersion: apps/v1
kind: Deployment
metadata:
  name: modeler-websockets
  labels:
    app: camunda-platform # kpt-set: ${camunda-app-name}
    app.kubernetes.io/version: "1.0.0" # kpt-set: ${camunda-app-version}
    app.kubernetes.io/name: modeler-websockets
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: modeler-websockets
spec:
  replicas: 1
  selector:
    matchLabels:
      app: camunda-platform # kpt-set: ${camunda-app-name}
      app.kubernetes.io/version: "1.0.0" # kpt-set: ${camunda-app-version}
      app.kubernetes.io/name: modeler-websockets
      app.kubernetes.io/instance: camunda
      app.kubernetes.io/part-of: camunda-platform
      app.kubernetes.io/component: modeler-websockets
  strategy: {}
  template:
    metadata:
      labels:
        app: camunda-platform # kpt-set: ${camunda-app-name}
        app.kubernetes.io/version: "1.0.0" # kpt-set: ${camunda-app-version}
        app.kubernetes.io/name: modeler-websockets
        app.kubernetes.io/instance: camunda
        app.kubernetes.io/part-of: camunda-platform
        app.kubernetes.io/component: modeler-websockets
        sidecar.istio.io/inject: "true"
    spec:
      serviceAccountName: camunda-modeler-websockets
      containers:
        - envFrom:
            - configMapRef:
                name: modeler-websockets-env-vars
          image: registry.camunda.cloud/web-modeler-ee/modeler-websockets:0.6.0-beta
          name: modeler-websockets
          ports:
            - containerPort: 8060
              name: http2-clients
          resources: {}
          volumeMounts:
            - name: modeler-websockets
              mountPath: /usr/local/etc/php/conf.d/php-dev.ini
              subPath: php-dev.ini
      restartPolicy: Always
      volumes:
        - name: modeler-websockets
          configMap:
            name: modeler-websockets
