webmodeler/beta/modeler-websockets/modeler-websockets-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: modeler-websockets
  labels:
    app: camunda-platform # kpt-set: ${camunda-app-name}
    app.kubernetes.io/version: "1.0.0" # kpt-set: ${camunda-app-version}
    app.kubernetes.io/name: modeler-websockets
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: modeler-websockets
spec:
  ports:
    - name: http-clients
      protocol: TCP
      port: 8060
      targetPort: 8060
  selector:
    app: camunda-platform # kpt-set: ${camunda-app-name}
    app.kubernetes.io/version: "1.0.0" # kpt-set: ${camunda-app-version}
    app.kubernetes.io/name: modeler-websockets
    app.kubernetes.io/instance: camunda
    app.kubernetes.io/part-of: camunda-platform
    app.kubernetes.io/component: modeler-websockets
